	    (one radio-, and two checkboxes) in addition to the values. SIMPLIFY! Should
	    now be more obvious.
	  - Fix for Konqueror - Can't use onChange, must use onClick instead. This means
	    that we have to catch what brower we're using, and set the correct variable
	    (currently I only have workarounds for Konqueror and Opera).
	  - Make sure we include rootdn and domaindn if SINGLE_USER.

	GUI layout change
	  - Variable lenght icons with better looking font.
	    + Smaller text font in buttons.
	    + Allow for international characters in buttons.
	    + Relative (to the font string length) button width.
	    Closes bug 8
	  - ACI editor written - change, delete and add ACI entries for an object
	    through the point-and-click interface (web browser).
	  - Generate variable length buttons depending on number of characters.
	  - The add user page have been rewritten
	    + Super admin should always be able to create users, even if the limit of
	      max users have been reached!
	    + Show the homedirectory in the verification page if it's defined.
	    + Move all user add forms to separate files in tables/ to minimize loading
	      time and ease readability.
	  - Do not say 'No users defined' in the left frame - quite pointless actually,
	    that should be obvious if there's no users! :).
	  - 'Add sub unit' link (just above the 'Add user' link). This link should be
	    in the 'main tree branch' (ie, not within a sub unit tree branch).
	  - If there's no MX pointer(s), then don't offer the DNS entry choice when
	    adding user to database.
	  - Implemented pql_bind9_del_zone() which will, recursivly, delete a DNS zone
	    of choice (called with base DN where zone is and the zone name).
	  - Update wording in delete domain question notice.
	  - Allow for calling config_ldap.php with ONE specific LDAP config type and
	    only show that, instead of showing everything in one page.
	    + Slight restructuring and renaming of show config options.