@@ -1,7 +1,7 @@
 <?php
 // attribute plugin for
 // mail (standard mail address)
-// $Id: attrib.mailquota.inc,v 2.20 2004-02-21 16:04:42 turbo Exp $
+// $Id: attrib.mailquota.inc,v 2.21 2004-03-01 10:09:08 turbo Exp $
 
 function attribute_check($type) {
     global $error, $LANG;
@@ -134,7 +134,7 @@ function attribute_print_form($type = "modify") {
 
 <?php
 }
-// '
+
 function attribute_save($type) {
     global $_pql, $LANG;
 
@@ -208,7 +208,7 @@ function attribute_save($type) {
 		$users = pql_user_get($_pql->ldap_linkid, $_REQUEST["domain"]);
 		if(is_array($users)) {
 			foreach($users as $user)
-			  $return[] = pql_replace_attribute($_pql->ldap_linkid, $user, pql_get_define("PQL_GLOB_ATTR_QUOTA"),
+			  $return[] = pql_replace_attribute($_pql->ldap_linkid, $user, pql_get_define("PQL_GLOB_ATTR_QUOTA_VALUE"),
 												$_REQUEST["mailquota"]);
 
 			if(in_array(false, $return)) 
@@ -238,10 +238,27 @@ function attribute_save($type) {
 			// The success msg is set above (in the switch($type) code).
 		} else {
 			// We're setting quota for a user
-			if(! pql_replace_attribute($_pql->ldap_linkid, $_REQUEST["user"], pql_get_define("PQL_GLOB_ATTR_QUOTA"),
-									   $mailquota))
-			  $msg = pql_complete_constant($LANG->_('Failed to change %what%'),
-										   array('what' => $LANG->_('quota'))) . ": " . pql_format_error(0);
+			if($_SESSION["NEW_STYLE_QUOTA"]) {
+				if($_REQUEST["maxsize"] != "")
+				  if(! pql_replace_attribute($_pql->ldap_linkid, $_REQUEST["user"],
+											 pql_get_define("PQL_GLOB_ATTR_QUOTA_SIZE"),
+											 $_REQUEST["maxsize"]))
+					$msg  = pql_complete_constant($LANG->_('Failed to change %what%'),
+												 array('what' => $LANG->_('quota size'))) . ": " . pql_format_error(0);
+				
+				if($_REQUEST["maxmails"] != "")
+				  if(! pql_replace_attribute($_pql->ldap_linkid, $_REQUEST["user"],
+											 pql_get_define("PQL_GLOB_ATTR_QUOTA_COUNT"),
+											 $_REQUEST["maxmails"]))
+					$msg .= "<br>".pql_complete_constant($LANG->_('Failed to change %what%'),
+														 array('what' => $LANG->_('quota count'))) . ": " . pql_format_error(0);
+			} else {
+				if(! pql_replace_attribute($_pql->ldap_linkid, $_REQUEST["user"],
+										   pql_get_define("PQL_GLOB_ATTR_QUOTA_VALUE"),
+										   $mailquota))
+				  $msg = pql_complete_constant($LANG->_('Failed to change %what%'),
+											   array('what' => $LANG->_('quota'))) . ": " . pql_format_error(0);
+			}
 		}
 		
 		attribute_forward($msg);
